feat(friends): implement GET /friends endpoint
- Created FriendReporitory.GetFriends to featch accepted friends
- Added FriendService.GetFriends to apply business logic
- Implemented FriendController.GetFriends to handle GET /friends
- Added dtos.FriendOutput for response formatting
- Registered endpoint in routes with AuthMiddleware#
